@@ -129,6 +129,10 @@ module BarMethods
   def quux_with_baz=(v)
     send(:quux_without_baz=, v) << '_with_baz'
   end
+  
+  def duck_with_orange
+    duck_without_orange << '_with_orange'
+  end
 end
 
 class MethodAliasingTest < Test::Unit::TestCase
@@ -225,5 +229,46 @@ class MethodAliasingTest < Test::Unit::TestCase
       assert_equal '?', punctuation
     end
     assert block_called
+  end
+  
+  def test_alias_method_chain_preserves_private_method_status
+    FooClassWithBarMethod.send(:define_method, 'duck', Proc.new { 'duck' })
+    FooClassWithBarMethod.send(:include, BarMethodAliaser)
+    FooClassWithBarMethod.send(:private, :duck)
+    
+    FooClassWithBarMethod.alias_method_chain :duck, :orange
+    
+    assert_raises NoMethodError do
+      @instance.duck
+    end
+    
+    assert_equal 'duck_with_orange', @instance.send(:duck)
+    assert FooClassWithBarMethod.private_method_defined?(:duck)
+  end
+  
+  def test_alias_method_chain_preserves_protected_method_status
+    FooClassWithBarMethod.send(:define_method, 'duck', Proc.new { 'duck' })
+    FooClassWithBarMethod.send(:include, BarMethodAliaser)
+    FooClassWithBarMethod.send(:protected, :duck)
+    
+    FooClassWithBarMethod.alias_method_chain :duck, :orange
+    
+    assert_raises NoMethodError do
+      @instance.duck
+    end
+    
+    assert_equal 'duck_with_orange', @instance.send(:duck)
+    assert FooClassWithBarMethod.protected_method_defined?(:duck)
+  end
+  
+  def test_alias_method_chain_preserves_public_method_status
+    FooClassWithBarMethod.send(:define_method, 'duck', Proc.new { 'duck' })
+    FooClassWithBarMethod.send(:include, BarMethodAliaser)
+    FooClassWithBarMethod.send(:public, :duck)
+    
+    FooClassWithBarMethod.alias_method_chain :duck, :orange
+    
+    assert_equal 'duck_with_orange', @instance.duck
+    assert FooClassWithBarMethod.public_method_defined?(:duck)
   end
 end
