@@ -1,5 +1,7 @@
 *SVN*
 
+* alias_method_chain preserves the original method's visibility.  #7854 [Jonathan Viney]
+
 * Update Dependencies to ignore constants inherited from ancestors. Closes #6951. [Nicholas Seckar]
 
 * Array#to_query preserves its ordering.  #7756 [Greg Spurrier]
